--- a/www/templates/Wasp/common.less
+++ b/www/templates/Wasp/common.less
@@ -355,10 +355,12 @@ input[type=checkbox] {
   &.collapseit {
     &:checked {
     }
-    &:not(:checked) + * {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    &:not(:checked) {
+      & + * {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
